--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -17,20 +17,20 @@ Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.28.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      CMSIS_AGDI.dll V1.31.18.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.6.0
 Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 D:\RT1052_Project\rt1052.uvprojx
-Project File Date:  11/29/2019
+Project File Date:  11/30/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling pin_mux.c...
 compiling main.c...
-compiling interrupt.c...
 linking...
-Program Size: Code=15236 RO-data=3932 RW-data=104 ZI-data=3460  
+Program Size: Code=18900 RO-data=4288 RW-data=104 ZI-data=3500  
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -64,7 +64,9 @@ Package Vendor: NXP
    * Component: common Version: 2.1.0
    * Component: dmamux Version: 2.0.2
    * Component: edma Version: 2.1.8
+   * Component: gpio Version: 2.0.2
    * Component: gpt Version: 2.0.0
+   * Component: i2c Version: 2.1.9
    * Component: iomuxc Version: 2.0.0
    * Component: lists Version: 1.0.0
    * Component: lpuart Version: 2.2.7
@@ -106,13 +108,13 @@ Package Vendor: NXP
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\queue.h
-      Include file:  Source\include\FreeRTOS.h
-      Include file:  Source\include\semphr.h
-      Source file:   Source\queue.c
       Source file:   Source\tasks.c
       Include file:  Source\include\task.h
+      Include file:  Source\include\semphr.h
       Source file:   Source\list.c
+      Source file:   Source\queue.c
+      Include file:  Source\include\FreeRTOS.h
+      Include file:  Source\include\queue.h
       Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
@@ -128,85 +130,93 @@ Package Vendor: NXP
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Source file:   Source\stream_buffer.c
       Include file:  Source\include\message_buffer.h
+      Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Stream Buffer:10.2.0
       Source file:   Source\stream_buffer.c
       Include file:  Source\include\stream_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Source file:   Source\timers.c
       Include file:  Source\include\timers.h
+      Source file:   Source\timers.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
       Source file:   drivers\fsl_clock.c
       Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
-      Source file:   drivers\fsl_common.c
       Include file:  drivers\fsl_common.h
+      Source file:   drivers\fsl_common.c
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Source file:   drivers\fsl_dmamux.c
       Include file:  drivers\fsl_dmamux.h
+      Source file:   drivers\fsl_dmamux.c
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
-      Include file:  drivers\fsl_edma.h
       Source file:   drivers\fsl_edma.c
+      Include file:  drivers\fsl_edma.h
+
+   * Component: NXP::Device:SDK Drivers:gpio:2.0.2
+      Include file:  drivers\fsl_gpio.h
+      Source file:   drivers\fsl_gpio.c
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
       Source file:   drivers\fsl_gpt.c
       Include file:  drivers\fsl_gpt.h
 
+   * Component: NXP::Device:SDK Drivers:i2c:2.1.9
+      Source file:   drivers\fsl_lpi2c.c
+      Include file:  drivers\fsl_lpi2c.h
+
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Source file:   components\lists\generic_list.c
       Include file:  components\lists\generic_list.h
+      Source file:   components\lists\generic_list.c
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
-      Include file:  drivers\fsl_lpuart.h
       Source file:   drivers\fsl_lpuart.c
+      Include file:  drivers\fsl_lpuart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
       Source file:   components\uart\lpuart_adapter.c
       Include file:  components\uart\uart.h
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Include file:  drivers\fsl_pit.h
       Source file:   drivers\fsl_pit.c
+      Include file:  drivers\fsl_pit.h
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
-      Source file:   drivers\fsl_qtmr.c
       Include file:  drivers\fsl_qtmr.h
+      Source file:   drivers\fsl_qtmr.c
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
       Source file:   utilities\debug_console\fsl_debug_console.c
-      Include file:  utilities\debug_console\fsl_debug_console.h
-      Include file:  utilities\debug_console\fsl_debug_console_conf.h
-      Source file:   utilities\str\fsl_str.c
       Include file:  utilities\str\fsl_str.h
+      Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\debug_console\fsl_debug_console_conf.h
+      Include file:  utilities\debug_console\fsl_debug_console.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
-      Include file:  components\serial_manager\serial_manager.h
       Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_port_internal.h
+      Include file:  components\serial_manager\serial_manager.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
       Source file:   components\serial_manager\serial_port_uart.c
@@ -217,13 +227,13 @@ Package Vendor: NXP
       Source file:   utilities\fsl_shell.c
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Source file:   arm\startup_MIMXRT1052.s
+      Include file:  system_MIMXRT1052.h
       Include file:  MIMXRT1052.h
       Include file:  MIMXRT1052_features.h
-      Include file:  system_MIMXRT1052.h
       Source file:   system_MIMXRT1052.c
       Include file:  fsl_device_registers.h
-Build Time Elapsed:  00:00:05
+      Source file:   arm\startup_MIMXRT1052.s
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
