--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,9 +27,25 @@ Project File Date:  12/09/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling task_app.c...
 compiling main.c...
+compiling interrupt.c...
+compiling lpuart1.c...
+compiling clib_arm.c...
+compiling freertos_evr.c...
+compiling rtc_drv.c...
+compiling cmsis_os2.c...
+compiling croutine.c...
+compiling list.c...
+compiling event_groups.c...
+compiling heap_4.c...
+compiling port.c...
+compiling stream_buffer.c...
+compiling queue.c...
+compiling tasks.c...
+compiling timers.c...
 linking...
-Program Size: Code=27944 RO-data=4628 RW-data=180 ZI-data=12928  
+Program Size: Code=28784 RO-data=4668 RW-data=192 ZI-data=14976  
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -109,12 +125,12 @@ Package Vendor: NXP
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\FreeRTOS.h
-      Source file:   Source\queue.c
-      Source file:   Source\tasks.c
       Include file:  Source\include\semphr.h
+      Include file:  Source\include\FreeRTOS.h
+      Source file:   Source\tasks.c
       Source file:   Source\list.c
       Include file:  Source\include\queue.h
+      Source file:   Source\queue.c
       Include file:  Source\include\task.h
       Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
@@ -145,9 +161,9 @@ Package Vendor: NXP
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
       Source file:   drivers\fsl_clock.c
@@ -158,16 +174,16 @@ Package Vendor: NXP
       Source file:   drivers\fsl_common.c
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Include file:  drivers\fsl_dmamux.h
       Source file:   drivers\fsl_dmamux.c
+      Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
       Source file:   drivers\fsl_edma.c
       Include file:  drivers\fsl_edma.h
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
-      Include file:  drivers\fsl_gpio.h
       Source file:   drivers\fsl_gpio.c
+      Include file:  drivers\fsl_gpio.h
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
       Source file:   drivers\fsl_gpt.c
@@ -181,16 +197,16 @@ Package Vendor: NXP
       Include file:  drivers\fsl_iomuxc.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Source file:   components\lists\generic_list.c
       Include file:  components\lists\generic_list.h
+      Source file:   components\lists\generic_list.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Source file:   drivers\fsl_lpspi.c
       Include file:  drivers\fsl_lpspi.h
+      Source file:   drivers\fsl_lpspi.c
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
-      Source file:   drivers\fsl_lpuart.c
       Include file:  drivers\fsl_lpuart.h
+      Source file:   drivers\fsl_lpuart.c
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
       Include file:  components\uart\uart.h
@@ -212,24 +228,24 @@ Package Vendor: NXP
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
+      Include file:  utilities\debug_console\fsl_debug_console.h
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
       Source file:   utilities\str\fsl_str.c
-      Source file:   utilities\debug_console\fsl_debug_console.c
-      Include file:  utilities\debug_console\fsl_debug_console.h
       Include file:  utilities\str\fsl_str.h
+      Source file:   utilities\debug_console\fsl_debug_console.c
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
-      Include file:  components\serial_manager\serial_manager.h
       Source file:   components\serial_manager\serial_manager.c
+      Include file:  components\serial_manager\serial_manager.h
       Include file:  components\serial_manager\serial_port_internal.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Include file:  components\serial_manager\serial_port_uart.h
       Source file:   components\serial_manager\serial_port_uart.c
+      Include file:  components\serial_manager\serial_port_uart.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
       Source file:   utilities\fsl_shell.c
@@ -239,10 +255,10 @@ Package Vendor: NXP
       Include file:  system_MIMXRT1052.h
       Source file:   system_MIMXRT1052.c
       Include file:  MIMXRT1052_features.h
-      Include file:  fsl_device_registers.h
       Source file:   arm\startup_MIMXRT1052.s
+      Include file:  fsl_device_registers.h
       Include file:  MIMXRT1052.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:09
 </pre>
 </body>
 </html>
