--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -28,23 +28,9 @@ Project File Date:  12/10/2019
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 compiling ble_app.c...
-User\src\ble_app.c(52): warning:  #940-D: missing return statement at end of non-void function "AT_SendCmd" 
-  }
-User\src\ble_app.c(65): warning:  #940-D: missing return statement at end of non-void function "AT_SendData" 
-  }
-User\src\ble_app.c(76): warning:  #940-D: missing return statement at end of non-void function "AT_SearchRecvBuf" 
-  }
-User\src\ble_app.c(101): warning:  #550-D: variable "ATCfg"  was set but never used
-      stcATConfig ATCfg;
-User\src\ble_app.c(125): warning:  #550-D: variable "ucTemp"  was set but never used
-      uint8_t ucTemp;
-User\src\ble_app.c: 5 warnings, 0 errors
 linking...
-.\Objects\rt1052.axf: Error: L6218E: Undefined symbol Uart_SendByte (referred from interrupt.o).
-Not enough information to list image symbols.
-Not enough information to list load addresses in the image map.
-Finished: 2 information, 0 warning and 1 error messages.
-".\Objects\rt1052.axf" - 1 Error(s), 5 Warning(s).
+Program Size: Code=34852 RO-data=5176 RW-data=352 ZI-data=15100  
+".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -85,6 +71,7 @@ Package Vendor: NXP
    * Component: lpspi Version: 2.0.3
    * Component: lpuart Version: 2.2.7
    * Component: lpuart_adapter Version: 1.0.0
+   * Component: lpuart_edma Version: 2.2.7
    * Component: pit Version: 2.0.2
    * Component: qtmr Version: 2.0.0
    * Component: snvs_hp Version: 2.1.2
@@ -124,22 +111,22 @@ Package Vendor: NXP
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
       Include file:  Source\include\FreeRTOS.h
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
+      Include file:  Source\include\semphr.h
       Source file:   Source\list.c
       Source file:   Source\queue.c
       Include file:  Source\include\queue.h
-      Include file:  Source\include\semphr.h
       Include file:  Source\include\task.h
       Source file:   Source\tasks.c
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Source file:   Source\croutine.c
       Include file:  Source\include\croutine.h
+      Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
-      Source file:   Source\event_groups.c
       Include file:  Source\include\event_groups.h
+      Source file:   Source\event_groups.c
 
    * Component: ARM.FreeRTOS::RTOS:Heap:Heap_4:10.2.0
       Source file:   Source\portable\MemMang\heap_4.c
@@ -153,14 +140,14 @@ Package Vendor: NXP
       Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Source file:   Source\timers.c
       Include file:  Source\include\timers.h
+      Source file:   Source\timers.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
@@ -172,24 +159,24 @@ Package Vendor: NXP
       Source file:   drivers\fsl_common.c
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Include file:  drivers\fsl_dmamux.h
       Source file:   drivers\fsl_dmamux.c
+      Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
       Source file:   drivers\fsl_edma.c
       Include file:  drivers\fsl_edma.h
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
-      Source file:   drivers\fsl_gpio.c
       Include file:  drivers\fsl_gpio.h
+      Source file:   drivers\fsl_gpio.c
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
       Source file:   drivers\fsl_gpt.c
       Include file:  drivers\fsl_gpt.h
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
-      Include file:  drivers\fsl_lpi2c.h
       Source file:   drivers\fsl_lpi2c.c
+      Include file:  drivers\fsl_lpi2c.h
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
@@ -199,51 +186,55 @@ Package Vendor: NXP
       Source file:   components\lists\generic_list.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Include file:  drivers\fsl_lpspi.h
       Source file:   drivers\fsl_lpspi.c
+      Include file:  drivers\fsl_lpspi.h
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
       Source file:   drivers\fsl_lpuart.c
       Include file:  drivers\fsl_lpuart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
-      Include file:  components\uart\uart.h
       Source file:   components\uart\lpuart_adapter.c
+      Include file:  components\uart\uart.h
+
+   * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
+      Source file:   drivers\fsl_lpuart_edma.c
+      Include file:  drivers\fsl_lpuart_edma.h
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Source file:   drivers\fsl_pit.c
       Include file:  drivers\fsl_pit.h
+      Source file:   drivers\fsl_pit.c
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
-      Source file:   drivers\fsl_qtmr.c
       Include file:  drivers\fsl_qtmr.h
+      Source file:   drivers\fsl_qtmr.c
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
-      Include file:  drivers\fsl_snvs_hp.h
       Source file:   drivers\fsl_snvs_hp.c
+      Include file:  drivers\fsl_snvs_hp.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Include file:  utilities\debug_console\fsl_debug_console.h
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
-      Include file:  utilities\str\fsl_str.h
+      Include file:  utilities\debug_console\fsl_debug_console.h
       Source file:   utilities\debug_console\fsl_debug_console.c
       Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\str\fsl_str.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
-      Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_manager.h
+      Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_port_internal.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Include file:  components\serial_manager\serial_port_uart.h
       Source file:   components\serial_manager\serial_port_uart.c
+      Include file:  components\serial_manager\serial_port_uart.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
       Source file:   utilities\fsl_shell.c
@@ -251,13 +242,12 @@ Package Vendor: NXP
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
       Source file:   arm\startup_MIMXRT1052.s
+      Include file:  system_MIMXRT1052.h
       Include file:  MIMXRT1052.h
       Include file:  MIMXRT1052_features.h
-      Include file:  system_MIMXRT1052.h
-      Source file:   system_MIMXRT1052.c
       Include file:  fsl_device_registers.h
-Target not created.
-Build Time Elapsed:  00:00:02
+      Source file:   system_MIMXRT1052.c
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
