--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,9 +27,10 @@ Project File Date:  12/13/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling interrupt.c...
 linking...
 .\RTE\Device\MIMXRT1052CVL5B\MIMXRT1052xxxxx_flexspi_nor.scf(97): warning: L6329W: Pattern *(NonCacheable) only matches removed unused sections.
-Program Size: Code=36720 RO-data=5336 RW-data=380 ZI-data=15152  
+Program Size: Code=39396 RO-data=5332 RW-data=380 ZI-data=15664  
 Finished: 0 information, 1 warning and 0 error messages.
 ".\Objects\rt1052.axf" - 0 Error(s), 1 Warning(s).
 
@@ -113,19 +114,19 @@ Package Vendor: NXP
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Source file:   Source\list.c
       Source file:   Source\queue.c
-      Include file:  Source\include\semphr.h
-      Include file:  Source\include\FreeRTOS.h
       Include file:  Source\include\queue.h
-      Source file:   Source\tasks.c
+      Include file:  Source\include\semphr.h
       Include file:  Source\include\task.h
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
+      Include file:  Source\include\FreeRTOS.h
+      Source file:   Source\tasks.c
+      Source file:   Source\list.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Include file:  Source\include\croutine.h
       Source file:   Source\croutine.c
+      Include file:  Source\include\croutine.h
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
       Source file:   Source\event_groups.c
@@ -135,16 +136,16 @@ Package Vendor: NXP
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Include file:  Source\include\message_buffer.h
       Source file:   Source\stream_buffer.c
+      Include file:  Source\include\message_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Stream Buffer:10.2.0
       Include file:  Source\include\stream_buffer.h
       Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Include file:  Source\include\timers.h
       Source file:   Source\timers.c
+      Include file:  Source\include\timers.h
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
@@ -158,8 +159,8 @@ Package Vendor: NXP
       Include file:  drivers\fsl_adc.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Source file:   drivers\fsl_clock.c
       Include file:  drivers\fsl_clock.h
+      Source file:   drivers\fsl_clock.c
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
       Source file:   drivers\fsl_common.c
@@ -170,8 +171,8 @@ Package Vendor: NXP
       Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
-      Include file:  drivers\fsl_edma.h
       Source file:   drivers\fsl_edma.c
+      Include file:  drivers\fsl_edma.h
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
       Source file:   drivers\fsl_gpio.c
@@ -182,8 +183,8 @@ Package Vendor: NXP
       Include file:  drivers\fsl_gpt.h
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
-      Include file:  drivers\fsl_lpi2c.h
       Source file:   drivers\fsl_lpi2c.c
+      Include file:  drivers\fsl_lpi2c.h
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
@@ -193,24 +194,24 @@ Package Vendor: NXP
       Include file:  components\lists\generic_list.h
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Include file:  drivers\fsl_lpspi.h
       Source file:   drivers\fsl_lpspi.c
+      Include file:  drivers\fsl_lpspi.h
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
-      Include file:  drivers\fsl_lpuart.h
       Source file:   drivers\fsl_lpuart.c
+      Include file:  drivers\fsl_lpuart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
       Source file:   components\uart\lpuart_adapter.c
       Include file:  components\uart\uart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
-      Include file:  drivers\fsl_lpuart_edma.h
       Source file:   drivers\fsl_lpuart_edma.c
+      Include file:  drivers\fsl_lpuart_edma.h
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Include file:  drivers\fsl_pit.h
       Source file:   drivers\fsl_pit.c
+      Include file:  drivers\fsl_pit.h
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
       Source file:   drivers\fsl_qtmr.c
@@ -221,44 +222,44 @@ Package Vendor: NXP
       Source file:   drivers\fsl_usdhc.c
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
-      Include file:  drivers\fsl_snvs_hp.h
       Source file:   drivers\fsl_snvs_hp.c
+      Include file:  drivers\fsl_snvs_hp.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Source file:   utilities\debug_console\fsl_debug_console.c
-      Include file:  utilities\debug_console\fsl_debug_console.h
-      Include file:  utilities\debug_console\fsl_debug_console_conf.h
       Source file:   utilities\str\fsl_str.c
+      Source file:   utilities\debug_console\fsl_debug_console.c
+      Include file:  utilities\debug_console\fsl_debug_console_conf.h
+      Include file:  utilities\debug_console\fsl_debug_console.h
       Include file:  utilities\str\fsl_str.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
-      Include file:  utilities\fsl_notifier.h
       Source file:   utilities\fsl_notifier.c
+      Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
+      Include file:  components\serial_manager\serial_port_internal.h
       Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_manager.h
-      Include file:  components\serial_manager\serial_port_internal.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Source file:   components\serial_manager\serial_port_uart.c
       Include file:  components\serial_manager\serial_port_uart.h
+      Source file:   components\serial_manager\serial_port_uart.c
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
-      Include file:  utilities\fsl_shell.h
       Source file:   utilities\fsl_shell.c
+      Include file:  utilities\fsl_shell.h
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Include file:  fsl_device_registers.h
-      Source file:   system_MIMXRT1052.c
       Source file:   arm\startup_MIMXRT1052.s
       Include file:  MIMXRT1052_features.h
+      Source file:   system_MIMXRT1052.c
+      Include file:  fsl_device_registers.h
       Include file:  system_MIMXRT1052.h
       Include file:  MIMXRT1052.h
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
