--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -22,20 +22,17 @@ Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 D:\RT1052_Project\rt1052.uvprojx
-Project File Date:  12/14/2019
+Project File Date:  12/15/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling adc_app.c...
-User\src\adc_app.c(30): warning:  #177-D: variable "timerCount"  was declared but never referenced
-      uint32_t timerCount = 0;
-User\src\adc_app.c: 1 warning, 0 errors
+compiling adc_drv.c...
 linking...
 .\RTE\Device\MIMXRT1052CVL5B\MIMXRT1052xxxxx_flexspi_nor.scf(97): warning: L6329W: Pattern *(NonCacheable) only matches removed unused sections.
-Program Size: Code=41844 RO-data=5340 RW-data=412 ZI-data=15828  
+Program Size: Code=43292 RO-data=5508 RW-data=412 ZI-data=15828  
 Finished: 0 information, 1 warning and 0 error messages.
-".\Objects\rt1052.axf" - 0 Error(s), 2 Warning(s).
+".\Objects\rt1052.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -65,6 +62,7 @@ Package Vendor: NXP
                 NXP.MIMXRT1052_DFP.12.0.0
                 Device Family Pack for MIMXRT1052
    * Component: adc_12b1msps_sar Version: 2.0.2
+   * Component: adc_etc Version: 2.0.1
    * Component: clock Version: 2.1.0
    * Component: common Version: 2.1.0
    * Component: dmamux Version: 2.0.2
@@ -82,6 +80,7 @@ Package Vendor: NXP
    * Component: qtmr Version: 2.0.0
    * Component: sdhc Version: 2.2.8
    * Component: snvs_hp Version: 2.1.2
+   * Component: xbara Version: 2.0.4
    * Component: assert Version: 1.0.0
    * Component: debug_console Version: 1.0.0
    * Component: notifier Version: 1.0.0
@@ -161,6 +160,10 @@ Package Vendor: NXP
       Source file:   drivers\fsl_adc.c
       Include file:  drivers\fsl_adc.h
 
+   * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
+      Source file:   drivers\fsl_adc_etc.c
+      Include file:  drivers\fsl_adc_etc.h
+
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
       Source file:   drivers\fsl_clock.c
       Include file:  drivers\fsl_clock.h
@@ -228,6 +231,10 @@ Package Vendor: NXP
       Source file:   drivers\fsl_snvs_hp.c
       Include file:  drivers\fsl_snvs_hp.h
 
+   * Component: NXP::Device:SDK Drivers:xbara:2.0.4
+      Source file:   drivers\fsl_xbara.c
+      Include file:  drivers\fsl_xbara.h
+
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
@@ -262,7 +269,7 @@ Package Vendor: NXP
       Include file:  MIMXRT1052.h
       Include file:  fsl_device_registers.h
       Source file:   arm\startup_MIMXRT1052.s
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
