--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,10 +27,10 @@ Project File Date:  12/22/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling ble_app.c...
+compiling adc_drv.c...
 linking...
 .\RTE\Device\MIMXRT1052CVL5B\MIMXRT1052xxxxx_flexspi_nor.scf(97): warning: L6329W: Pattern *(NonCacheable) only matches removed unused sections.
-Program Size: Code=36704 RO-data=5108 RW-data=672 ZI-data=17264  
+Program Size: Code=40064 RO-data=5108 RW-data=688 ZI-data=17776  
 Finished: 0 information, 1 warning and 0 error messages.
 ".\Objects\rt1052.axf" - 0 Error(s), 1 Warning(s).
 
