--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  12/26/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling emmc_drv.c...
+compiling adc_app.c...
 linking...
-Program Size: Code=85944 RO-data=7312 RW-data=792 ZI-data=24948  
+Program Size: Code=82988 RO-data=7236 RW-data=804 ZI-data=24948  
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
